Diseño Parte uno

--- a/src/layouts/side-nav-outer-toolbar/perfil/profile-card.scss
+++ b/src/layouts/side-nav-outer-toolbar/perfil/profile-card.scss
@@ -47,6 +47,12 @@
 
    border-radius: 24px !important;
 }
+
+.white-icon-button .dx-icon { 
+  color: white !important;
+ }
+
+
 ////////////////////////////////////////////////////////////barra lateral extendida
 /* profile-card.css */
 .profile-card_out_2 {
