--- a/src/layouts/side-nav-outer-toolbar/side-nav-outer-toolbar.scss
+++ b/src/layouts/side-nav-outer-toolbar/side-nav-outer-toolbar.scss
@@ -8,3 +8,9 @@
     z-index: 1505;
   }
 }
+
+
+.side-navigation-menu { 
+  background: linear-gradient(to right, #02A39D, #02A9B7, #02C3A4); 
+  //color: #fff;
+ }
