--- a/src/components/create-account-form/CreateAccountForm.scss
+++ b/src/components/create-account-form/CreateAccountForm.scss
@@ -17,3 +17,13 @@
     border-bottom: 1px solid var(--border-color);
   }
 }
+
+span#RegistroUsuario.letrasNegro{ 
+  color: black !important; 
+  font-family: 'Lato', sans-serif  !important; 
+  font-size: 16px !important;
+  font-weight: 300  !important;
+  //letter-spacing: 1px;
+}
+
+
