--- a/src/layouts/side-nav-outer-toolbar/perfil/profile-card.scss
+++ b/src/layouts/side-nav-outer-toolbar/perfil/profile-card.scss
@@ -27,7 +27,7 @@
   /* Redondeo en la parte inferior */
    border-radius: 50%;
   /* Opcional: ligera sombra en el borde redondeado inferior */
-  box-shadow: 0 8px 12px -8px rgba(0,0,0,0.2);
+   //box-shadow: 0 8px 12px -8px rgba(0,0,0,0.2);
 }
 
 .profile-info_out_1 {
@@ -85,7 +85,7 @@
   /* Redondeo en la parte inferior */
    border-radius: 50%;
   /* Opcional: ligera sombra en el borde redondeado inferior */
-  box-shadow: 0 8px 12px -8px rgba(0,0,0,0.2);
+  //box-shadow: 0 8px 12px -8px rgba(0,0,0,0.2);
 }
 
 .profile-info_out_2 {
@@ -140,7 +140,7 @@
   /* Redondeo en la parte inferior */
    border-radius: 50%;
   /* Opcional: ligera sombra en el borde redondeado inferior */
-  box-shadow: 0 8px 12px -8px rgba(0,0,0,0.2);
+  //box-shadow: 0 8px 12px -8px rgba(0,0,0,0.2);
 }
 
 .profile-info_out_3 {
