--- a/src/pages/escritorio/escritorio.scss
+++ b/src/pages/escritorio/escritorio.scss
@@ -42,24 +42,7 @@ border-left: #55AD57 solid 5px !important;
   overflow: hidden;
 } */
 
-
-
-/* Tab normal */
-.tabDocumentos .dx-tab {
-  background-color: #BFBFBF !important;
-
-    border-top-left-radius: 0px !important;
-  border-top-right-radius: 0px !important;
-
-  //color: #ffffff !important;
-
-  transition: background-color 0.3s ease;
-
-
-  text-align: center; 
-
-}
-
+//////////////////////////////////////////////////////////////////
 .tabEscritorio .dx-tab-text-span{
 
   font-family: 'Lato', sans-serif !important;
@@ -89,38 +72,125 @@ border-left: #55AD57 solid 5px !important;
    letter-spacing: 1px;
 }
 
-
-.tabDocumentos .dx-tab.dx-tab-selected,
-.tabDocumentos .dx-tab.dx-tab-selected.dx-state-active {
-  background: #BFBFBF;
-  //color: white !important;
-
-   font-family: 'Lato', sans-serif !important;
-  font-size: 14px !important;
-  font-weight: 400 !important; /* Aplica el peso negrita */
-   letter-spacing: 1px;
-}
-
-
-/* Hover */
-/* .tabEscritorio .dx-tab:hover {
-  background: linear-gradient(to right, #02A39D, #02A9B7, #02C3A4);
-  color: white !important;
-  font-family: 'Lato', sans-serif !important;
-  font-size: 14px !important;
-  font-weight: 400 !important;
-   //letter-spacing: 1px;
-}
- */
-/* Focus */
 .tabEscritorio .dx-tab.dx-state-focused {
   background-color: #02A39D;
   color: white;
 }
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+/// 
+/// 
+/// 
 
+.tabDocumentos .dx-tab-text-span{
+
+  font-family: 'Lato', sans-serif !important;
+  font-weight: 800 !important; 
+ 
+
+}
+
+ .tabDocumentos .dx-tab {
+  background-color: #ffffff;
+  width: 130px !important;
+  transition: background-color 0.3s ease;
+  border-top-left-radius: 15px !important;
+  border-top-right-radius: 15px !important;
+ 
+  text-align: center; 
+
+}
+
+.tabDocumentos .dx-tab.dx-tab-selected,
+.tabDocumentos .dx-tab.dx-tab-selected.dx-state-active {
+  //background: linear-gradient(to right, #2a2f2f, #9da8a9, #a9bab7);
+  background:#EAEAEA;
+  //color: white !important;
+   font-family: 'Lato', sans-serif !important;
+  font-size: 14px !important;
+  //font-weight: 700 !important; /* Aplica el peso negrita */
+   letter-spacing: 1px;
+}
 
 .tabDocumentos .dx-tab.dx-state-focused {
-  background-color: #02A39D;
-  color: white;
+  background-color: #EAEAEA !important;
+  color: #000000 !important;
+}
+
+.tabDocumentos .dx-tab.dx-tab-selected .dx-icon {
+    color: #002f2a !important;
+}
+
+
+.tabDocumentos .dx-tabs-styling-mode-secondary.dx-tab-indicator-position-right .dx-tab-selected::after {
+   background-color: #98989A; 
+}
+///////////////////////////////////////////////////////////////////////////////////
+.tabPractica .dx-tab-text-span{
+
+  font-family: 'Lato', sans-serif !important;
+  font-weight: 800 !important; 
+ 
+
+}
+
+ .tabPractica .dx-tab {
+  background-color: #ffffff;
+  width: 130px !important;
+  transition: background-color 0.3s ease;
+  border-top-left-radius: 15px !important;
+  border-top-right-radius: 15px !important;
+ 
+  text-align: center; 
+
+}
+
+
+
+.tabPractica .dx-tab.dx-tab-selected,
+.tabPractica .dx-tab.dx-tab-selected.dx-state-active {
+  //background: linear-gradient(to right, #2a2f2f, #9da8a9, #a9bab7);
+  background:#EAEAEA;
+  color: black !important;
+   font-family: 'Lato', sans-serif !important;
+  font-size: 14px !important;
+  //font-weight: 700 !important; /* Aplica el peso negrita */
+   letter-spacing: 1px;
+}
+
+.tabPractica .dx-tab.dx-state-focused {
+  background-color: #EAEAEA !important;
+  color: #000000 !important;
+}
+
+.tabPractica .dx-tab.dx-tab-selected .dx-icon {
+    color: #002f2a !important;
+}
+
+
+.tabPractica .dx-tabs-styling-mode-secondary.dx-tab-indicator-position-right .dx-tab-selected::after {
+   background-color: #98989A; 
+}
+/* Focus */
+
+.documentoValidado{
+  color:#55AD57; 
+  padding: 7px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.documentoRechazado{
+  color:#E66929;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.documentoPorValidar{
+  color:#161A1D;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
